--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ main{
     border: 1px solid black;
     min-height: 10em;
     margin: 0 .25em;
+    padding: 0;
+}
+
+.first-section-td{
+    text-align: center;
+    width: 10em;
 }
 
 #text-section{
@@ -114,7 +120,6 @@ main{
         padding: 0;
         height: 10em !important;
         overflow: auto;
-        border: 1px solid black;
     }
     
     #first-section-tb{
@@ -136,9 +141,8 @@ main{
         overflow: auto;
         padding: 0 .5em;
         margin: 1.5em 0 0 0;
-        height: 11em !important;
+        height: 11em;
         flex: none;
-        border: 1px solid black;
     }
     
     #text-section-header{
@@ -157,13 +161,8 @@ main{
         margin: 1.5em 0;
         padding: 0;
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto;
-        gap: .75em .9em;
-        border: 1px solid black;
-    }
-    
-    .second-section-img{
-        width: 95%;
+        gap: .5em .9em;
     }
 }
